# reengkigo-admin-server

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  config.yaml  cookies.txt  docker-compose.yml  folder_list.csv  project_list.yaml
asset/jelly/Apr/: data.json  subtitle.json
asset/jelly/Aug/: data.json  subtitle.json
asset/jelly/Dec/: data.json  subtitle.json
asset/jelly/Feb/: data.json  subtitle.json
asset/jelly/Jan/: data.json
asset/jelly/Jul/: data.json  subtitle.json
asset/jelly/Jun/: data.json  subtitle.json
asset/jelly/Mar/: data.json  subtitle.json
asset/jelly/May/: data.json  subtitle.json
asset/jelly/Nov/: data.json  subtitle.json
asset/jelly/Oct/: data.json  subtitle.json
asset/jelly/Sep/: data.json  subtitle.json
asset/juice/Apr/: data.json  subtitle.json
asset/juice/Aug/: data.json  subtitle.json
asset/juice/Dec/: data.json  subtitle.json
asset/juice/Feb/: data.json
asset/juice/Jan/: data.json  subtitle.json
asset/juice/Jul/: data.json  subtitle.json
asset/juice/Jun/: data.json  subtitle.json
asset/juice/Mar/: data.json  subtitle.json
asset/juice/May/: data.json  subtitle.json
asset/juice/Nov/: data.json  subtitle.json
asset/juice/Oct/: data.json  subtitle.json
asset/juice/Sep/: data.json  subtitle.json
asset/stage_1_1/Apr/: data.json  subtitle.json
asset/stage_1_1/Aug/: data.json  subtitle.json
asset/stage_1_1/Dec/: data.json  subtitle.json
asset/stage_1_1/Feb/: data.json  subtitle.json
asset/stage_1_1/Jan/: data.json  subtitle.json
asset/stage_1_1/Jul/: data.json  subtitle.json
asset/stage_1_1/Jun/: data.json  subtitle.json
asset/stage_1_1/Mar/: data.json  subtitle.json
asset/stage_1_1/May/: data.json  subtitle.json
asset/stage_1_1/Nov/: data.json  subtitle.json
asset/stage_1_1/Oct/: data.json  subtitle.json
asset/stage_1_1/Sep/: data.json  subtitle.json
asset/stage_1_2/Apr/: data.json  subtitle.json
asset/stage_1_2/Aug/: data.json  subtitle.json
asset/stage_1_2/Dec/: data.json  subtitle.json
asset/stage_1_2/Feb/: data.json  subtitle.json
asset/stage_1_2/Jan/: data.json  subtitle.json
asset/stage_1_2/Jul/: data.json  subtitle.json
asset/stage_1_2/Jun/: data.json  subtitle.json
asset/stage_1_2/Mar/: data.json  subtitle.json
asset/stage_1_2/May/: data.json  subtitle.json
asset/stage_1_2/Nov/: data.json  subtitle.json
asset/stage_1_2/Oct/: data.json  subtitle.json
asset/stage_1_2/Sep/: data.json  subtitle.json
asset/stage_2_1/Apr/: data.json  subtitle.json
asset/stage_2_1/Aug/: data.json  subtitle.json
asset/stage_2_1/Dec/: data.json  subtitle.json
asset/stage_2_1/Feb/: data.json  subtitle.json
asset/stage_2_1/Jan/: data.json  subtitle.json
asset/stage_2_1/Jul/: data.json  subtitle.json
asset/stage_2_1/Jun/: data.json  (+1 more)
docs/: api-reference.md  api.md  development.md  project-overview.md  system-flow.md
example/: db_crud_sampling.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/dto/: asset.rs  auth.rs  file.rs  folder_category.rs  mod.rs
src/handlers/: admin_head.rs  auth.rs  dashboard.rs  dashboard_streaming.rs  file.rs  folder_category.rs  mod.rs
src/middleware/: auth.rs
src/models/: asset.rs  folder_category.rs  user.rs
src/services/: asset.rs  auth.rs  dashboard.rs  database.rs  file.rs  mod.rs
src/templates/: login.html
src/utils/: logging.rs  mod.rs
static/css/: admin.css
static/js/: admin.js
tests/: asset_service_tests.rs  integration_tests.rs  model_tests.rs
tests/common/: mod.rs
(+3071 files in other folders)
