[package]
name = "reengkigo-admin-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "server_test"
path = "src/lib.rs"

[[bin]]
name = "reengkigo-admin-app"
path = "src/main.rs"

[[bin]]
name = "migrate_data"
path = "src/bin/migrate_data.rs"

[[bin]]
name = "process_youtube_links"
path = "src/bin/process_youtube_links.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }

# Database
mongodb = "2.8"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Configuration (Enterprise-grade config management)
config = "0.14"
figment = { version = "0.10", features = ["yaml", "env"] }

# Graceful shutdown
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for validating YouTube URLs)
reqwest = { version = "0.11", features = ["json"] }

# Template engine for UI
askama = "0.12"
askama_axum = "0.4"

# File upload handling
multer = "3.0"

# API documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }